# bot

./: .env.dist  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: configurations.py
src/bot/: __main__.py  misc.py
src/bot/handlers/: create_post_handlers.py  user_handlers.py
src/bot/keyboards/: main_keyboard.py  main_menu.py  posts_keyboards.py
src/bot/lexicon/: __init__.py  lexicon_ru.py
src/bot/middlewares/: register_check.py
src/db/: database.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2023_07_17_2041-a382b691b261_create_table.py
src/db/models/: __init__.py  base.py  post.py  post_channel.py  url.py  user.py
src/db/models/types/: __init__.py  url.py
tests/: conftest.py  mocked_bot.py  utils.py
tests/test_handlers/: test_start.py
